# drones_messages

./: README.md
multidrone_messages/: CMakeLists.txt  package.xml
multidrone_messages/msg/: Coefficients.msg  InitMsg.msg  ObstacleMsg.msg  ReplanInfo.msg  RichTrajectory.msg  TestMsg.msg  Trajectory.msg
primitive_planner_messages/: CMakeLists.txt  package.xml
